docs/k8s/initializer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-injector-controller
  namespace: default
spec:
  selector:
    matchLabels:
      app: config-injector-controller
  template:
    metadata:
      labels:
        app: config-injector-controller
    spec:
      containers:
      - name: config-injector-controller
        image: wanderadock/scccmd:latest
        args:
        - initializer
        - --namespace=default
        - --configmap=initializer-config
        - --initializer-name=config.initializer.kubernetes.io
        - --watched-namespace=default
