docs/k8s/bundle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-injector
spec:
  selector:
    matchLabels:
      app: config-injector
  template:
    metadata:
      labels:
        app: config-injector
    spec:
      containers:
      - name: config-injector-initializer
        image: ghcr.io/wandera/scccmd:v2.0.0
        args:
        - webhook
        - --config-file
        - /config/config.yaml
        - --cert-file
        - /keys/publickey.cer
        - --key-file
        - /keys/private.key
        volumeMounts:
        - name: config-volume
          mountPath: /config
          readOnly: true
        - name: keys-volume
          mountPath: /keys
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: config-injector-config
      - name: keys-volume
        secret:
          secretName: config-injector-cert
---
apiVersion: v1
kind: Service
metadata:
  name: config-injector
spec:
  ports:
  - port: 443
    name: https
  selector:
    app: config-injector
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: config-injector-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: config-injector
      namespace: config
      path: /inject
  matchPolicy: Exact
  name: config.scccmd.github.com
  namespaceSelector:
    matchLabels:
      inject-config: "true"
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
